--- a/clickjacking/index.html
+++ b/clickjacking/index.html
@@ -3,9 +3,6 @@
 <title>Clickjack test page</title>
 </head>
 <body>
-	<!-- for testing purposes -->
-<!-- <p>Website is vulnerable to clickjacking!</p> -->
-<!-- <iframe src="https://acad.app.vanderbilt.edu/student-search/StudentLanding.action?commodoreId=C05526610" width="500" height="500"></iframe> -->
 
 <style>
 iframe { /* iframe from the victim site */
@@ -67,8 +64,9 @@ button {
 <h3>You win a 12.9-inch iPad Pro 🎉</h3>
 
 <!-- The url from the victim site -->
+
+<!-- HAVE TO CHANGE THESE -->
 <iframe src="https://acad.app.vanderbilt.edu/more/SearchClasses!input.action?commodoreIdToLoad=C05526610"></iframe>
-<!-- <iframe src="https://yes.vanderbilt.edu" /> </iframe> -->
 <img class="ipad" src='https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/ipad-pro-11-select-wifi-spacegray-201810_FMT_WHH?wid=940&hei=1112&fmt=png-alpha&qlt=80&.v=1540591835446' />
 <img class="ipad2" src='https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/ipad-banner-pencil-201810?wid=1144&hei=892&fmt=jpeg&qlt=80&op_usm=0.5,0.5&.v=1540344564922' />
 <button class="in-cart">Confirm </button>
